--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,20 @@
   <groupId>projetos</groupId>
   <artifactId>Biblioteca</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+        	<outputDirectory>deployment</outputDirectory>
+        	<failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
